cluster/apps/smtp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smtp-deployment
  namespace: smtp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smtp
  template:
    metadata:
      labels:
        app: smtp
    spec:
      containers:
        - name: smtp
          image: loganmarchione/docker-postfixrelay:1.2.0
          ports:
            - containerPort: 25
          volumeMounts:
            - name: data
              mountPath: /var/spool/postfix
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: smtp-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: smtp-service-tcp
  namespace: smtp
spec:
  type: LoadBalancer
  ports:
    - name: smtp
      targetPort: 25
      port: smtp
      protocol: TCP
  selector:
    app: smtp
