cluster/apps/cyberchef.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cyberchef
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyberchef-deployment
  namespace: cyberchef
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cyberchef
  template:
    metadata:
      labels:
        app: cyberchef
    spec:
      containers:
        - name: cyberchef
          image: mpepping/cyberchef:v9.48.0
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: cyberchef-service
  namespace: cyberchef
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 8000
      port: 8000
      protocol: TCP
  selector:
    app: cyberchef
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cyberchef-ingress
  namespace: cyberchef
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: cyberchef.${SECRET_INTERNAL_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cyberchef-service
                port:
                  number: 8000
  tls:
    - hosts:
        - cyberchef.${SECRET_INTERNAL_DOMAIN_NAME}
      secretName: cyberchef-tls
