cluster/apps/drawio.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drawio-deployment
  namespace: drawio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drawio
  template:
    metadata:
      labels:
        app: drawio
    spec:
      containers:
        - name: drawio
          image: jgraph/drawio:alpine
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: drawio-service
  namespace: drawio
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 8080
      port: 8080
      protocol: TCP
  selector:
    app: drawio
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drawio-ingress
  namespace: drawio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: drawio.${SECRET_INTERNAL_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drawio-service
                port:
                  number: 8080
  tls:
    - hosts:
        - drawio.${SECRET_INTERNAL_DOMAIN_NAME}
      secretName: drawio-tls
