cluster/apps/registry-ui.yaml
# ---
# Don't need a namespace here, since namespace is in registry.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-ui-deployment
  namespace: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-ui
  template:
    metadata:
      labels:
        app: registry-ui
    spec:
      containers:
        - name: registry-ui
          image: joxit/docker-registry-ui:2.3.2
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: registry-ui-service
  namespace: registry
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 80
      port: 80
      protocol: TCP
  selector:
    app: registry-ui
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ui-ingress
  namespace: registry
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: registry-ui.${SECRET_INTERNAL_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-ui-service
                port:
                  number: 80
  tls:
    - hosts:
        - registry-ui.${SECRET_INTERNAL_DOMAIN_NAME}
      secretName: registry-ui-tls
