cluster/apps/traefik-dashboard.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
  namespace: kube-system
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 9000
      port: 9000
      protocol: TCP
  selector:
    app: traefik
    app.kubernetes.io/name: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-ingress
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: traefik-k3s.${SECRET_INTERNAL_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard-service
                port:
                  number: 9000
  tls:
    - hosts:
        - traefik-k3s.${SECRET_INTERNAL_DOMAIN_NAME}
      secretName: traefik-dashboard-tls
